# vhs-digitizer

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
backend/: database.py  main.py  obs.py  pyproject.toml
backend/tests/: conftest.py  test_api.py  test_database.py  test_obs.py
docs/: packaging.md  vhs-digitizer-chapters-prd.md  vhs-digitizer-prd.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: ChapterEditor.jsx  Dashboard.jsx  OBSSettings.jsx  RecordingSession.jsx  TapeLibrary.jsx  TimeInput.jsx
frontend/src/test/: Dashboard.test.jsx  TimeInput.test.jsx  api.test.js
packaging/: build-deb.sh
packaging/debian/: control  postinst  postrm  prerm  vhs-digitizer.service
